fixed safari svg + spacing

--- a/src/pages/Home/Projects/Display/style.css
+++ b/src/pages/Home/Projects/Display/style.css
@@ -17,7 +17,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    flex-shrink: 0;
 }
 
 #display-container p {
@@ -36,13 +37,15 @@
 }
 
 #display-text-right {
-    margin-bottom: 40%;
-    margin-left: 50%;
+    top: 5%;
+    right: 5%;
+    width: 100px;
 }
 
 #display-text-left {
-    margin-top: 50%;
-    margin-right: 50%;
+    bottom: 5%;
+    left: -2.5%;
+    width: 100px;
 }
 
 .display-text-container {
@@ -62,6 +65,8 @@
     .display-item {
         padding-right: 30px;
         width: 400px;
+        flex-shrink: 1;
+
     }
 
     #display-text-right {
